test/Fail/Issue5558.err
Issue5558.agda:3,3-15: error: [MissingDeclarations]
The following names are defined but not accompanied by a
declaration: A
Issue5558.agda:6,3-7,10: error: [MissingDeclarations]
The following names are defined but not accompanied by a
declaration: B
